src/github.com/ebay/akutan/query/parser/testdata/legacy/errors/5_terms_not_valid.res
Query:
# too many terms, and the last one isn't a valid term at all.
?id ?s rdfs:label ?l unknown

Parsed:
Error: unable to parse query: line 2 column 22: expected end of line, but got 'unknown'
